# drfTemp

./: .env.example  Dockerfile  README.md  pyproject.toml
src/: manage.py
src/AIDADRF/: asgi.py  settings.py  urls.py  wsgi.py
