[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Django REST Framework略してDRF☆by CTO"
authors = ["ClearClown(清楚系ピエロ) <clearcleaclown@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.1"
djangorestframework = "^3.15.2"
django-cors-headers = "^4.4.0"
dj-database-url = "^2.2.0"
gunicorn = "^23.0.0"
whitenoise = "^6.7.0"
django-environ = "^0.11.2"
python-dotenv = "^1.0.1"
pytest = "^8.3.2"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"